# narraforge

./: .cbmignore  .gitignore  AGENTS.md  AGENTs.md  CLAUDE.md  NGROK-INTEGRATION.md  README.md  README_zh.md  cover-landscape.html  design-preview.html  docker-compose.yml  narraforge.code-worksapce  narraforge.code-workspace  package-lock.json  package.json  playwright.config.ts
agent/: .env.example  langgraph.json  pyproject.toml
agent/app/: backend_client.py  config.py  graph.py  graph_knowledge_video.py  llm.py  schemas.py  source_elements.py  state.py
agent/app/nodes/: gen_script.py  graphStates.py  script_review.py  select_tts_engine.py  split_segment.py  synthesis.py  util.py
agent/app/prompts/: knowledge_video.py  loader.py  narration.py
agent/tests/: test_backend_client.py  test_config.py  test_gen_script.py  test_graph.py  test_kv_backend_client.py  test_kv_gen_animation_brief.py  test_kv_gen_narration.py  test_kv_graph.py  test_kv_preflight.py  test_kv_prompts.py  test_kv_quality_review.py  test_kv_review_decision.py  test_kv_scaffold.py  test_kv_schemas.py  test_kv_split_chapters.py  test_kv_synthesis.py  test_llm.py  test_prompts.py  test_schemas.py  test_script_review.py  test_select_tts_engine.py  test_source_elements.py  test_split_segment.py  test_synthesis.py
backend/: .coverage  .dockerignore  .env.e2e  .env.example  .env.prod-test  Dockerfile  README_TESTING.md  TESTING_SUMMARY.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test.bat  test.sh  workflow_checkpoints.db-shm  workflow_checkpoints.db-wal  workflow_store.db-shm  workflow_store.db-wal
backend/app/api/: __init__.py  _voice_helpers.py  clone.py  config.py  mimo_tts.py  model_config.py  narrations.py  roles.py  segmented_projects.py  sources.py  speech_to_text.py  subtitle_llm.py  text_analysis.py  text_split.py  timeline.py  tts.py  voxcpm.py  workflow.py
backend/app/core/: __init__.py  audio_encoder.py  config.py  crypto_service.py  database.py  model_config_service.py  segmented_assets.py  system_config_service.py  time_utils.py
backend/app/models/: __init__.py  narration.py  role.py  segmented_project.py  source_document.py  system_config.py  timeline.py  transcription_record.py  tts_config.py  tts_result.py  voice_profile.py  workflow_run.py
backend/app/schemas/: __init__.py  role.py  segmented_project.py  workflow.py
backend/app/services/: edge_tts_service.py  engine_capabilities.py  funasr_service.py  llm_client.py  llm_subtitle_service.py  migrate_asset_layout.py  mimo_tts_service.py  qiniu_service.py  qwen_tts_service.py  remotion_scaffold_service.py  role_service.py  segmented_project_service.py  source_document_service.py  srt_service.py  text_analysis_service.py  text_split_service.py  voice_to_srt_service.py  voxcpm_service.py  workflow_graph.py  workflow_nodes.py  workflow_progress.py  workflow_service.py  workflow_store.py
backend/scripts/: README-NGROK.md  mark_silent_segments.py  migrate_asset_layout.py  migrate_narration_ids.py  start-dev.ps1  update_db_schema.py
backend/tests/: README.md  TEST_MAP.md  __init__.py  conftest.py  qiniu_test.py  run_tests.py  test_animation_spec_api.py  test_api_clone.py  test_api_speech_to_text.py  test_api_tts.py  test_audio_encoder.py  test_config_crypto.py  test_funasr_debug.py  test_funasr_service.py  test_llm_client.py  test_mark_silent_segments.py  test_markdown_split_api.py  test_migrate_asset_layout.py  test_narration_models.py  test_narrations_api.py  test_remotion_scaffold.py  test_role_service.py  test_roles_api.py  test_segmented_assets.py  test_segmented_projects_api.py  test_segmented_projects_service.py  test_segmented_synthesis.py  test_sources_api.py  test_srt_service.py  test_synthesize_speech_internal.py  test_text_split_api.py  test_text_split_service.py
backend/tests/cosyvoiceability/: latextest.py
backend/tests/fixtures/: __init__.py  factories.py
backend/tests/integration/: test_chapters_batch.py  test_clone_api.py  test_external_url_clone.py  test_text_analysis_api.py  test_tts_api.py
backend/tests/manual/: manual_check_voices.py  manual_correction.py  manual_funasr_real.py  manual_json_extract.py  manual_prefilter.py  (+5 more)
docs/: ENV.md  (+20 more)
(+514 files in other folders)
