[project]
name = "agent"
version = "0.1.0"
description = "NarraForge narration workflow LangGraph agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.9",
    "langgraph-cli[inmem]>=0.1.0",
    "pydantic>=2.13.4",
    "httpx>=0.27",
    "instructor>=1.4",
    "langchain-core>=0.3",
    "openai>=1.50",
    "langsmith>=0.3",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
