[project]
name = "backend"
version = "0.1.0"
description = "NarraForge backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    "dashscope>=1.25.0",
    "edge-tts>=7.0.0",
    "faster-whisper>=1.2.1",
    "qiniu>=7.17.0",
    "funasr>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "requests-mock>=1.11.0",
    "sqlalchemy-utils>=0.41.1",
    "freezegun>=1.2.2",
    "factory-boy>=3.3.0",
    "Faker>=21.0.0",
    "starlette-testclient>=0.3.0"
]
dev = [
    "black>=23.12.1",
    "flake8>=6.1.0",
    "isort>=5.13.2",
    "mypy>=1.8.0"
]
